--- a/css/style.css
+++ b/css/style.css
@@ -740,7 +740,8 @@ align-items: flex-start;
   @media screen and (max-width: 1024px) {
 
     body{
-  
+  margin-left:3rem;
+  margin-right: 3rem;
     }
 
 .Header__hebAct{
@@ -866,8 +867,7 @@ body{
   display: flex;
   flex-direction: column;
 
- margin:0;
- padding:0;
+
 
 font-size: 14px;
 }
